--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>360 image viewer</title>
+    <title>Midlakes 360 image viewer</title>
     <link rel="stylesheet" href="/bootstrap.min.css"/>
     <link rel="stylesheet" href="/pannellum.css"/>
     <link rel="stylesheet" href="/style.css"/>
@@ -12,7 +12,7 @@
 <body>
   <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="masthead d-flex flex-row align-items-center mb-4 text-center">
-      <h3 class="masthead-brand m-0">360 image viewer</h3>
+      <h3 class="masthead-brand m-0">Midlakes 360 image viewer</h3>
       <h4 class="flex-grow-1 m-0" id="filename"></h4>
       <span>Based on <a href="https://pannellum.org/">Pannellum</a></span>
     </header>
@@ -33,16 +33,25 @@
       </p>
     </main>
     <div class="lead d-flex flex-row align-items-center">
-      Examples
+      Upstairs
       <div class="d-flex flex-column">
-        <a href="#" class="example"><img src="/example.jpg" width="200" alt="Cedar Breaks" /></a>
-        <a href="https://www.flickr.com/photos/orientalizing/">by orientalizing</a>
+        <a href="#" class="example"><img src="/example.jpg" width="200" alt="Upstairs 1" /></a>
       </div>
       <div class="d-flex flex-column">
-        <a href="#" class="example"><img src="/example2.jpg" width="200" alt="Siilinjärven kirkon kattokruunun alla" /></a>
-        <a href="https://www.flickr.com/photos/jannefoo/">by jannefoo</a>
+        <a href="#" class="example"><img src="/example2.jpg" width="200" alt="Upstairs 2" /></a>
       </div>
     </div>
+
+    <div class="lead d-flex flex-row align-items-center">
+      Main Floor
+      <div class="d-flex flex-column">
+        <a href="#" class="example"><img src="/example.jpg" width="200" alt="Main 1" /></a>
+      </div>
+      <div class="d-flex flex-column">
+        <a href="#" class="example"><img src="/example2.jpg" width="200" alt="Main 2" /></a>
+      </div>
+    </div>
+      
 
     <script>
       const panorama = document.getElementById("panorama");
