Uncomment reselect span and update label text

--- a/index.html
+++ b/index.html
@@ -24,19 +24,18 @@
           To start, select a thumbnail below
           <br>
         </span>
-        <!-- 
-          <span id="reselect" hidden>
-          Select another file
+        <span id="reselect" hidden>
+          Select another image
         </span>
         <label class="btn btn-lg btn-secondary">
             Browse <input id="file" type="file" hidden>
         </label>
-          -->
       </p>
     </main>
+
+<h4>Thunbnails</h4>
       
     <div class="lead d-flex flex-row align-items-center">
-      <h3>Upstairs</h3>
       <div class="d-flex flex-column">
         <a href="#" class="example"><img src="/example.jpg" width="100" alt="Upstairs 1" /></a>
       </div>
