Add autoRotate option to pannellum viewer

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
               type: "equirectangular",
               panorama: url,
               autoLoad: true,
+              autoRotate: -2,
           });
       }
       file.addEventListener("change", function(e) {
